fix: aligned layouts to be responsive on mobile

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -25,9 +25,48 @@
 .text-right {
   align-items: flex-end;
   justify-content: center;
-  /* max-width: 30%; */
+}
+.hero-section h1 {
+  font-size: clamp(2.5rem, 8vw, 5rem);
+  margin: 0;
+  white-space: nowrap;
+}
+.hero-section h2 {
+  max-width: 80%;
+  font-weight: 400;
+  color: #8d98a7;
 }
 
-.hero-section h2 {
-  max-width: 50%;
+@media (max-width: 768px) {
+  .hero-section {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    padding: 220px 20px 80px 20px;
+    min-height: 80vh;
+  }
+
+  .title-left,
+  .text-right {
+    flex: none;
+    width: 100%;
+    align-items: center;
+  }
+
+  .text-right {
+    justify-content: flex-end;
+  }
+
+  .hero-section h1 {
+    font-size: 3.5rem;
+    margin: 0;
+  }
+
+  .hero-section h2 {
+    max-width: 70%;
+    font-size: 1.5rem;
+    line-height: 1.8;
+    margin-bottom: 200px;
+  }
 }
